# tradermade-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_tradermade_mcp.cmd  run_tradermade_mcp.py
src/tradermade_mcp/: __init__.py  endpoint_catalog.json  endpoint_index.py  formatters.py  functions.py  indicator_math.py  parser.py  server.py  server_tools.py  store.py
src/tradermade_mcp/components/: __init__.py  analytics.py  indicators.py
test/: test_mcp.py  test_parser_inline.py  test_storage.py
