[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradermade-mcp"
version = "0.1.0"
description = "Massive-style MCP server for TraderMade market data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI" }]
license = { text = "MIT" }
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "certifi>=2024.2.2",
  "pydantic>=2.6.0",
]
keywords = ["mcp", "tradermade", "forex", "market-data", "fx", "cfd", "crypto"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://tradermade.com/"
Documentation = "https://tradermade.com/docs/restful-api"

[project.scripts]
tradermade_mcp = "tradermade_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tradermade_mcp = ["endpoint_catalog.json"]
